Fix Java 11 issue